--- a/index.html
+++ b/index.html
@@ -1,9 +1,8 @@
 <!DOCTYPE html>
 <html class="nojs html css_verticalspacer" lang="en-US">
  <head>
-  
-  
-   <!-- Global site tag (gtag.js) - Google Analytics -->
+
+<!-- Global site tag (gtag.js) - Google Analytics -->
 <script async src="https://www.googletagmanager.com/gtag/js?id=UA-148814600-1"></script>
 <script>
   window.dataLayer = window.dataLayer || [];
@@ -20,7 +19,7 @@
   <script type="text/javascript">
    // Update the 'nojs'/'js' class on the html node
 document.documentElement.className = document.documentElement.className.replace(/\bnojs\b/g, 'js');
-   
+
 // Check that all required assets are uploaded and up-to-date
 if(typeof Muse == "undefined") window.Muse = {}; window.Muse.assets = {"required":["museutils.js", "museconfig.js", "jquery.watch.js", "webpro.js", "musewpdisclosure.js", "jquery.museresponsive.js", "require.js", "index.css"], "outOfDate":[]};
 </script>
@@ -29,14 +28,14 @@ if(typeof Muse == "undefined") window.Muse = {}; window.Muse.assets = {"required
   <!-- CSS -->
   <link rel="stylesheet" type="text/css" href="css/site_global.css?crc=444006867"/>
   <link rel="stylesheet" type="text/css" href="css/master_footeronly.css?crc=256212913"/>
-  <link rel="stylesheet" type="text/css" href="css/index.css?crc=4055476544" id="pagesheet"/>
+  <link rel="stylesheet" type="text/css" href="css/index.css?crc=92911814" id="pagesheet"/>
   <!-- IE-only CSS -->
   <!--[if lt IE 9]>
   <link rel="stylesheet" type="text/css" href="css/nomq_preview_master_footeronly.css?crc=81110276"/>
-  <link rel="stylesheet" type="text/css" href="css/nomq_index.css?crc=14372573" id="nomq_pagesheet"/>
+  <link rel="stylesheet" type="text/css" href="css/nomq_index.css?crc=178379564" id="nomq_pagesheet"/>
   <![endif]-->
   <!-- JS includes -->
-  <script src="https://use.typekit.net/ik/PKdIv2ISoO6TIVq_jL_LRjeTKQnDGvGp8rtwVu5MZJSfenGgf40zr69PHQIkF2q3FR9UWDjUjhm8FhI3ZQbtjDj3wRqhZ2qu529k52FK5QBR5AJte8w7OcsyS1sldamX-euyZhUyjKo1-WsGiAJ0-AvCZeBkieuziWsGdAB1deBKOciTieyujKoTdkUaiaS0ZeBkieuziWsGdAB1deBKOciTieyujKoTdkJIdeBXdkG4fFsEIMMjfPMfH6GJlOIgIMMjgPMfH6qJhWGbMg6YJM4HgIuuShAbMpK2C53B.js" type="text/javascript"></script>
+  <script src="https://use.typekit.net/ik/yi4MYVMme9n0jvk5GM3AONjgeQn6BYyHJIXQQFEe_7IfenGgf40zr69PHQIkF2q3FR9UWDjUjhm8FhI3ZQbtjDj3wRqhZ2qu529k52FK5QBR5AJte8w7OcsyS1sldamX-euyZhUyjKo1-WsGiAJ0-AvCZeBkieuziWsGdAB1deBKOciTieyujKoTdkUaiaS0ZeBkieuziWsGdAB1deBKOciTieyujKoTdkJIdeBXdkG4fFsEIMMjfPMfH6GJlOIgIMMjgPMfH6qJhWGbMg6YJM4HgIuuShAbMp--C53B.js" type="text/javascript"></script>
   <!-- Other scripts -->
   <script type="text/javascript">
    try {Typekit.load();} catch(e) {}
@@ -57,13 +56,13 @@ if(typeof Muse == "undefined") window.Muse = {}; window.Muse.assets = {"required
        <p id="u55792-6">Department of Earth Sciences</p>
       </div>
      </div>
-     <div class="clearfix colelem" id="u58016"><!-- group -->
-      <a class="nonblock nontext MuseLinkActive grpelem" id="u58022-4" href="index.html" data-sizePolicy="fixed" data-pintopage="page_fluidx"><!-- rasterized frame --><img class="temp_no_img_src" id="u58022-4_img" alt="Home" width="60" height="30" data-orig-src="images/u58022-4-a.png?crc=3841297786" src="images/blank.gif?crc=4208392903"/></a>
-      <a class="nonblock nontext clearfix grpelem shared_content" id="u58017-4" href="people.html" data-sizePolicy="fixed" data-pintopage="page_fluidx" data-content-guid="u58017-4_content"><!-- content --><p id="u58017-2">People</p></a>
-      <a class="nonblock nontext clearfix grpelem shared_content" id="u58018-4" href="research.html" data-sizePolicy="fixed" data-pintopage="page_fluidx" data-content-guid="u58018-4_content"><!-- content --><p id="u58018-2"><span id="u58018">Research</span></p></a>
-      <a class="nonblock nontext clearfix grpelem shared_content" id="u58019-4" href="publications.html" data-sizePolicy="fixed" data-pintopage="page_fluidx" data-content-guid="u58019-4_content"><!-- content --><p id="u58019-2">Publications</p></a>
-      <a class="nonblock nontext clearfix grpelem shared_content" id="u58020-4" href="facilities.html" data-sizePolicy="fixed" data-pintopage="page_fluidx" data-content-guid="u58020-4_content"><!-- content --><p id="u58020-2">Facilities</p></a>
-      <a class="nonblock nontext clearfix grpelem shared_content" id="u58021-4" href="contact.html" data-sizePolicy="fixed" data-pintopage="page_fluidx" data-content-guid="u58021-4_content"><!-- content --><p id="u58021-2">Contact</p></a>
+     <div class="clearfix colelem shared_content" id="u58016" data-content-guid="u58016_content"><!-- group -->
+      <a class="nonblock nontext MuseLinkActive clearfix grpelem" id="u58022-4" href="index.html" data-sizePolicy="fixed" data-pintopage="page_fluidx"><!-- content --><p id="u58022-2">Home</p></a>
+      <a class="nonblock nontext clearfix grpelem" id="u58017-4" href="people.html" data-sizePolicy="fixed" data-pintopage="page_fluidx"><!-- content --><p id="u58017-2">People</p></a>
+      <a class="nonblock nontext clearfix grpelem" id="u58018-4" href="research.html" data-sizePolicy="fixed" data-pintopage="page_fluidx"><!-- content --><p id="u58018-2"><span id="u58018">Research</span></p></a>
+      <a class="nonblock nontext clearfix grpelem" id="u58019-4" href="publications.html" data-sizePolicy="fixed" data-pintopage="page_fluidx"><!-- content --><p id="u58019-2">Publications</p></a>
+      <a class="nonblock nontext clearfix grpelem" id="u58020-4" href="facilities.html" data-sizePolicy="fixed" data-pintopage="page_fluidx"><!-- content --><p id="u58020-2">Facilities</p></a>
+      <a class="nonblock nontext clearfix grpelem" id="u58021-4" href="contact.html" data-sizePolicy="fixed" data-pintopage="page_fluidx"><!-- content --><p id="u58021-2">Contact</p></a>
      </div>
      <div class="clearfix colelem shared_content" id="u60144-4" data-content-guid="u60144-4_content"><!-- content -->
       <p id="u60144-2">Iron is the most abundant transition metal in the Earth's crust; as such, it is a key player in the planetary redox budget and it utilized by nearly all life.&nbsp; Iron is present in a diverse suite of minerals and is the crucial component in magnetic minerals such natural &quot;permanent&quot; magnets.&nbsp; Our group uses iron minerals to understand the (co)evolution of Earth’s surface environments and life and the fidelity of the rock record in preserving ancient bio- and environmental signatures.</p>
@@ -93,14 +92,7 @@ if(typeof Muse == "undefined") window.Muse = {}; window.Muse.assets = {"required
       </div>
       <span class="clearfix grpelem placeholder" data-placeholder-for="u55792-8_content"><!-- placeholder node --></span>
      </div>
-     <div class="clearfix colelem temp_no_id" data-orig-id="u58016"><!-- group -->
-      <a class="nonblock nontext MuseLinkActive grpelem temp_no_id" href="index.html" data-sizePolicy="fixed" data-pintopage="page_fluidx" data-orig-id="u58022-4"><!-- rasterized frame --><img class="temp_no_id temp_no_img_src" alt="Home" width="60" height="30" data-orig-src="images/u58022-4-a2.png?crc=3841297786" data-orig-id="u58022-4_img" src="images/blank.gif?crc=4208392903"/></a>
-      <span class="nonblock nontext clearfix grpelem placeholder" data-placeholder-for="u58017-4_content"><!-- placeholder node --></span>
-      <span class="nonblock nontext clearfix grpelem placeholder" data-placeholder-for="u58018-4_content"><!-- placeholder node --></span>
-      <span class="nonblock nontext clearfix grpelem placeholder" data-placeholder-for="u58019-4_content"><!-- placeholder node --></span>
-      <span class="nonblock nontext clearfix grpelem placeholder" data-placeholder-for="u58020-4_content"><!-- placeholder node --></span>
-      <span class="nonblock nontext clearfix grpelem placeholder" data-placeholder-for="u58021-4_content"><!-- placeholder node --></span>
-     </div>
+     <span class="clearfix colelem placeholder" data-placeholder-for="u58016_content"><!-- placeholder node --></span>
      <span class="clearfix colelem placeholder" data-placeholder-for="u60144-4_content"><!-- placeholder node --></span>
      <span class="browser_width colelem placeholder" data-placeholder-for="u60991-bw_content"><!-- placeholder node --></span>
     </div>
@@ -117,14 +109,7 @@ if(typeof Muse == "undefined") window.Muse = {}; window.Muse.assets = {"required
       </div>
       <span class="clearfix grpelem placeholder" data-placeholder-for="u55792-8_content"><!-- placeholder node --></span>
      </div>
-     <div class="clearfix colelem temp_no_id shared_content" data-orig-id="u58016" data-content-guid="u58016_content"><!-- group -->
-      <a class="nonblock nontext MuseLinkActive clearfix grpelem temp_no_id" href="index.html" data-sizePolicy="fixed" data-pintopage="page_fluidx" data-orig-id="u58022-4"><!-- content --><p id="u58022-2">Home</p></a>
-      <span class="nonblock nontext clearfix grpelem placeholder" data-placeholder-for="u58017-4_content"><!-- placeholder node --></span>
-      <span class="nonblock nontext clearfix grpelem placeholder" data-placeholder-for="u58018-4_content"><!-- placeholder node --></span>
-      <span class="nonblock nontext clearfix grpelem placeholder" data-placeholder-for="u58019-4_content"><!-- placeholder node --></span>
-      <span class="nonblock nontext clearfix grpelem placeholder" data-placeholder-for="u58020-4_content"><!-- placeholder node --></span>
-      <span class="nonblock nontext clearfix grpelem placeholder" data-placeholder-for="u58021-4_content"><!-- placeholder node --></span>
-     </div>
+     <span class="clearfix colelem placeholder" data-placeholder-for="u58016_content"><!-- placeholder node --></span>
      <span class="clearfix colelem placeholder" data-placeholder-for="u60144-4_content"><!-- placeholder node --></span>
      <span class="browser_width colelem placeholder" data-placeholder-for="u60991-bw_content"><!-- placeholder node --></span>
     </div>
@@ -284,10 +269,15 @@ var suppressMissingFileError = false
 </script>
   <script type="text/javascript">
    window.Muse.assets.check=function(c){if(!window.Muse.assets.checked){window.Muse.assets.checked=!0;var b={},d=function(a,b){if(window.getComputedStyle){var c=window.getComputedStyle(a,null);return c&&c.getPropertyValue(b)||c&&c[b]||""}if(document.documentElement.currentStyle)return(c=a.currentStyle)&&c[b]||a.style&&a.style[b]||"";return""},a=function(a){if(a.match(/^rgb/))return a=a.replace(/\s+/g,"").match(/([\d\,]+)/gi)[0].split(","),(parseInt(a[0])<<16)+(parseInt(a[1])<<8)+parseInt(a[2]);if(a.match(/^\#/))return parseInt(a.substr(1),
+
 16);return 0},f=function(f){for(var g=document.getElementsByTagName("link"),j=0;j<g.length;j++)if("text/css"==g[j].type){var l=(g[j].href||"").match(/\/?css\/([\w\-]+\.css)\?crc=(\d+)/);if(!l||!l[1]||!l[2])break;b[l[1]]=l[2]}g=document.createElement("div");g.className="version";g.style.cssText="display:none; width:1px; height:1px;";document.getElementsByTagName("body")[0].appendChild(g);for(j=0;j<Muse.assets.required.length;){var l=Muse.assets.required[j],k=l.match(/([\w\-\.]+)\.(\w+)$/),i=k&&k[1]?
+
 k[1]:null,k=k&&k[2]?k[2]:null;switch(k.toLowerCase()){case "css":i=i.replace(/\W/gi,"_").replace(/^([^a-z])/gi,"_$1");g.className+=" "+i;i=a(d(g,"color"));k=a(d(g,"backgroundColor"));i!=0||k!=0?(Muse.assets.required.splice(j,1),"undefined"!=typeof b[l]&&(i!=b[l]>>>24||k!=(b[l]&16777215))&&Muse.assets.outOfDate.push(l)):j++;g.className="version";break;case "js":j++;break;default:throw Error("Unsupported file type: "+k);}}c?c().jquery!="1.8.3"&&Muse.assets.outOfDate.push("jquery-1.8.3.min.js"):Muse.assets.required.push("jquery-1.8.3.min.js");
+
 g.parentNode.removeChild(g);if(Muse.assets.outOfDate.length||Muse.assets.required.length)g="Some files on the server may be missing or incorrect. Clear browser cache and try again. If the problem persists please contact website author.",f&&Muse.assets.outOfDate.length&&(g+="\nOut of date: "+Muse.assets.outOfDate.join(",")),f&&Muse.assets.required.length&&(g+="\nMissing: "+Muse.assets.required.join(",")),suppressMissingFileError?(g+="\nUse SuppressMissingFileError key in AppPrefs.xml to show missing file error pop up.",console.log(g)):alert(g)};location&&location.search&&location.search.match&&location.search.match(/muse_debug/gi)?
+
 setTimeout(function(){f(!0)},5E3):f()}};
+
 var muse_init=function(){require.config({baseUrl:""});require(["jquery","museutils","whatinput","jquery.watch","webpro","musewpdisclosure","jquery.museresponsive"],function(c){var $ = c;$(document).ready(function(){try{
 window.Muse.assets.check($);/* body */
 Muse.Utils.transformMarkupToFixBrowserProblemsPreInit();/* body */
@@ -301,6 +291,7 @@ Muse.Utils.fullPage('#page');/* 100% height page */
 $( '.breakpoint' ).registerBreakpoint();/* Register breakpoints */
 Muse.Utils.transformMarkupToFixBrowserProblems();/* body */
 }catch(b){if(b&&"function"==typeof b.notify?b.notify():Muse.Assert.fail("Error calling selector function: "+b),false)throw b;}})})};
+
 
 </script>
   <!-- RequireJS script -->
