--- a/people.html
+++ b/people.html
@@ -31,6 +31,15 @@ if(typeof Muse == "undefined") window.Muse = {}; window.Muse.assets = {"required
    try {Typekit.load();} catch(e) {}
 </script>
    </head>
+ <!-- Global site tag (gtag.js) - Google Analytics -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=UA-148814600-1"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'UA-148814600-1');
+</script>
  <body>
 
   <div class="breakpoint active" id="bp_infinity" data-min-width="1271"><!-- responsive breakpoint node -->
