--- a/people.html
+++ b/people.html
@@ -18,15 +18,15 @@ if(typeof Muse == "undefined") window.Muse = {}; window.Muse.assets = {"required
   <title>People</title>
   <!-- CSS -->
   <link rel="stylesheet" type="text/css" href="css/site_global.css?crc=3864510681"/>
-  <link rel="stylesheet" type="text/css" href="css/master_a-master.css?crc=4031832158"/>
-  <link rel="stylesheet" type="text/css" href="css/people.css?crc=457328905" id="pagesheet"/>
+  <link rel="stylesheet" type="text/css" href="css/master_a-master.css?crc=4197019259"/>
+  <link rel="stylesheet" type="text/css" href="css/people.css?crc=4080839811" id="pagesheet"/>
   <!-- IE-only CSS -->
   <!--[if lt IE 9]>
-  <link rel="stylesheet" type="text/css" href="css/nomq_preview_master_a-master.css?crc=163624781"/>
-  <link rel="stylesheet" type="text/css" href="css/nomq_people.css?crc=4201936448" id="nomq_pagesheet"/>
+  <link rel="stylesheet" type="text/css" href="css/nomq_preview_master_a-master.css?crc=333964721"/>
+  <link rel="stylesheet" type="text/css" href="css/nomq_people.css?crc=3959546279" id="nomq_pagesheet"/>
   <![endif]-->
   <!-- JS includes -->
-  <script src="https://use.typekit.net/ik/LslSDF6U5V3UAT42NAiRMimei5BM89Soj_ikFvYDHpjfenGgfF5ZTfJPHQSU52qhwRSuWDj3FQwUF2yRwcjUFQm8wRBqwQ6uF24yw29u52Juw28Re8w7OcsyS1sldamX-euyZhUyjKo1-WsGiAJ0-AvCZeBkieuziWsGdAB1deBKOciTieyujKoTdkUaiaS0ZeBkieuziWsGdAB1deBKOciTieyujKoTdkJIdeBXdkG4fFsEIMMjfPMfH6GJlOIgIMMjgPMfH6qJhWGbMg6YJM4HgIuuShAbMjniX4je.js" type="text/javascript"></script>
+  <script src="https://use.typekit.net/ik/FMj1PKQ-L1ADONRrKI7KHwxwf1C7ClSTCJhdgt4m9s6fenGgfF5ZTfJPHQSU52qhwRSuWDj3FQwUF2yRwcjUFQm8wRBqwQ6uF24yw29u52Juw28Re8w7OcsyS1sldamX-euyZhUyjKo1-WsGiAJ0-AvCZeBkieuziWsGdAB1deBKOciTieyujKoTdkUaiaS0ZeBkieuziWsGdAB1deBKOciTieyujKoTdkJIdeBXdkG4fFsEIMMjfPMfH6GJlOIgIMMjgPMfH6qJhWGbMg6YJM4HgIuuShAbMLYRX4je.js" type="text/javascript"></script>
   <!-- Other scripts -->
   <script type="text/javascript">
    try {Typekit.load();} catch(e) {}
@@ -579,10 +579,14 @@ if(typeof Muse == "undefined") window.Muse = {}; window.Muse.assets = {"required
        </div>
        <span class="colelem placeholder" data-placeholder-for="u94188_content"><!-- placeholder node --></span>
       </div>
-      <span class="clearfix grpelem placeholder" data-placeholder-for="u94368-10_content"><!-- placeholder node --></span>
+      <div class="browser_width grpelem" id="u94368-10-bw">
+       <span class="clearfix placeholder" data-placeholder-for="u94368-10_content"><!-- placeholder node --></span>
+      </div>
      </div>
      <div class="clearfix colelem" id="pu94191-10"><!-- group -->
-      <span class="clearfix grpelem placeholder" data-placeholder-for="u94191-10_content"><!-- placeholder node --></span>
+      <div class="browser_width grpelem" id="u94191-10-bw">
+       <span class="clearfix placeholder" data-placeholder-for="u94191-10_content"><!-- placeholder node --></span>
+      </div>
       <span class="clearfix grpelem placeholder" data-placeholder-for="u94192_content"><!-- placeholder node --></span>
      </div>
      <div class="browser_width colelem" id="u83670-4-bw">
@@ -622,7 +626,9 @@ if(typeof Muse == "undefined") window.Muse = {}; window.Muse.assets = {"required
       </div>
      </div>
      <div class="clearfix colelem" id="pu94080-9"><!-- group -->
-      <span class="clearfix grpelem placeholder" data-placeholder-for="u94080-9_content"><!-- placeholder node --></span>
+      <div class="browser_width grpelem" id="u94080-9-bw">
+       <span class="clearfix placeholder" data-placeholder-for="u94080-9_content"><!-- placeholder node --></span>
+      </div>
       <div class="clearfix grpelem temp_no_id" data-orig-id="u94081"><!-- column -->
        <div class="clip_frame colelem temp_no_id" data-sizePolicy="fixed" data-pintopage="page_fluidx" data-orig-id="u94083"><!-- image -->
         <img class="block temp_no_id temp_no_img_src" data-orig-src="images/p6161169-crop-u940835.jpg?crc=3946285319" alt="" width="200" height="230" data-orig-id="u94083_img" src="images/blank.gif?crc=4208392903"/>
@@ -696,10 +702,14 @@ if(typeof Muse == "undefined") window.Muse = {}; window.Muse.assets = {"required
        </div>
        <span class="colelem placeholder" data-placeholder-for="u94188_content"><!-- placeholder node --></span>
       </div>
-      <span class="clearfix grpelem placeholder" data-placeholder-for="u94368-10_content"><!-- placeholder node --></span>
+      <div class="browser_width grpelem temp_no_id" data-orig-id="u94368-10-bw">
+       <span class="clearfix placeholder" data-placeholder-for="u94368-10_content"><!-- placeholder node --></span>
+      </div>
      </div>
      <div class="clearfix colelem temp_no_id" data-orig-id="pu94191-10"><!-- group -->
-      <span class="clearfix grpelem placeholder" data-placeholder-for="u94191-10_content"><!-- placeholder node --></span>
+      <div class="browser_width grpelem temp_no_id" data-orig-id="u94191-10-bw">
+       <span class="clearfix placeholder" data-placeholder-for="u94191-10_content"><!-- placeholder node --></span>
+      </div>
       <span class="clearfix grpelem placeholder" data-placeholder-for="u94192_content"><!-- placeholder node --></span>
      </div>
      <div class="browser_width colelem temp_no_id" data-orig-id="u83670-4-bw">
@@ -739,7 +749,9 @@ if(typeof Muse == "undefined") window.Muse = {}; window.Muse.assets = {"required
       </div>
      </div>
      <div class="clearfix colelem temp_no_id" data-orig-id="pu94080-9"><!-- group -->
-      <span class="clearfix grpelem placeholder" data-placeholder-for="u94080-9_content"><!-- placeholder node --></span>
+      <div class="browser_width grpelem temp_no_id" data-orig-id="u94080-9-bw">
+       <span class="clearfix placeholder" data-placeholder-for="u94080-9_content"><!-- placeholder node --></span>
+      </div>
       <div class="clearfix grpelem temp_no_id" data-orig-id="u94081"><!-- column -->
        <div class="clip_frame colelem temp_no_id" data-sizePolicy="fixed" data-pintopage="page_fluidx" data-orig-id="u94083"><!-- image -->
         <img class="block temp_no_id temp_no_img_src" data-orig-src="images/p6161169-crop-u940836.jpg?crc=3946285319" alt="" width="200" height="230" data-orig-id="u94083_img" src="images/blank.gif?crc=4208392903"/>
@@ -815,9 +827,15 @@ if(typeof Muse == "undefined") window.Muse = {}; window.Muse.assets = {"required
        </div>
        <span class="colelem placeholder" data-placeholder-for="u94188_content"><!-- placeholder node --></span>
       </div>
-      <span class="clearfix grpelem placeholder" data-placeholder-for="u94191-10_content"><!-- placeholder node --></span>
+      <div class="browser_width grpelem temp_no_id" data-orig-id="u94368-10-bw">
+       <span class="clearfix placeholder" data-placeholder-for="u94368-10_content"><!-- placeholder node --></span>
+      </div>
+     </div>
+     <div class="clearfix colelem temp_no_id" data-orig-id="pu94191-10"><!-- group -->
+      <div class="browser_width grpelem temp_no_id" data-orig-id="u94191-10-bw">
+       <span class="clearfix placeholder" data-placeholder-for="u94191-10_content"><!-- placeholder node --></span>
+      </div>
       <span class="clearfix grpelem placeholder" data-placeholder-for="u94192_content"><!-- placeholder node --></span>
-      <span class="clearfix grpelem placeholder" data-placeholder-for="u94368-10_content"><!-- placeholder node --></span>
      </div>
      <div class="browser_width colelem temp_no_id" data-orig-id="u83670-4-bw">
       <span class="clearfix placeholder" data-placeholder-for="u83670-4_content"><!-- placeholder node --></span>
@@ -856,7 +874,9 @@ if(typeof Muse == "undefined") window.Muse = {}; window.Muse.assets = {"required
       </div>
      </div>
      <div class="clearfix colelem temp_no_id" data-orig-id="pu94080-9"><!-- group -->
-      <span class="clearfix grpelem placeholder" data-placeholder-for="u94080-9_content"><!-- placeholder node --></span>
+      <div class="browser_width grpelem temp_no_id" data-orig-id="u94080-9-bw">
+       <span class="clearfix placeholder" data-placeholder-for="u94080-9_content"><!-- placeholder node --></span>
+      </div>
       <div class="clearfix grpelem temp_no_id" data-orig-id="u94081"><!-- column -->
        <div class="clip_frame colelem temp_no_id" data-sizePolicy="fixed" data-pintopage="page_fluidx" data-orig-id="u94083"><!-- image -->
         <img class="block temp_no_id temp_no_img_src" data-orig-src="images/p6161169-crop-u940837.jpg?crc=3946285319" alt="" width="200" height="230" data-orig-id="u94083_img" src="images/blank.gif?crc=4208392903"/>
@@ -876,7 +896,7 @@ if(typeof Muse == "undefined") window.Muse = {}; window.Muse.assets = {"required
       </div>
      </div>
     </div>
-    <div class="verticalspacer" data-offset-top="3298" data-content-above-spacer="3297" data-content-below-spacer="85" data-sizePolicy="fixed" data-pintopage="page_fixedLeft"></div>
+    <div class="verticalspacer" data-offset-top="3311" data-content-above-spacer="3310" data-content-below-spacer="85" data-sizePolicy="fixed" data-pintopage="page_fixedLeft"></div>
     <div class="clearfix grpelem temp_no_id" data-orig-id="u451"><!-- column -->
      <span class="clearfix colelem placeholder" data-placeholder-for="u6894_content"><!-- placeholder node --></span>
      <span class="clearfix colelem placeholder" data-placeholder-for="u6986-4_content"><!-- placeholder node --></span>
@@ -1232,7 +1252,7 @@ if(typeof Muse == "undefined") window.Muse = {}; window.Muse.assets = {"required
       <span class="clearfix placeholder" data-placeholder-for="u68492-11_content"><!-- placeholder node --></span>
      </div>
     </div>
-    <div class="verticalspacer" data-offset-top="3636" data-content-above-spacer="3635" data-content-below-spacer="77" data-sizePolicy="fixed" data-pintopage="page_fixedLeft"></div>
+    <div class="verticalspacer" data-offset-top="3532" data-content-above-spacer="3531" data-content-below-spacer="77" data-sizePolicy="fixed" data-pintopage="page_fixedLeft"></div>
     <div class="clearfix grpelem temp_no_id" data-orig-id="u451"><!-- column -->
      <div class="clearfix colelem temp_no_id" data-orig-id="u6894"><!-- group -->
       <a class="nonblock nontext clip_frame grpelem temp_no_id" href="https://earthsciences.dartmouth.edu/" data-mu-ie-matrix="progid:DXImageTransform.Microsoft.Matrix(M11=0,M12=-1,M21=1,M22=0,SizingMethod='auto expand')" data-mu-ie-matrix-dx="-13" data-mu-ie-matrix-dy="13" data-sizePolicy="fixed" data-pintopage="page_fixedLeft" data-orig-id="u6737"><!-- image --><img class="block temp_no_id temp_no_img_src" data-orig-src="images/lonepine_black.png?crc=325230627" alt="" width="35" height="62" data-orig-id="u6737_img" src="images/blank.gif?crc=4208392903"/></a>
