--- a/index.html
+++ b/index.html
@@ -2,6 +2,16 @@
 <html class="nojs html css_verticalspacer" lang="en-US">
  <head>
 
+  <!-- Global site tag (gtag.js) - Google Analytics -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=UA-148814600-1"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'UA-148814600-1');
+</script>
+
   <meta http-equiv="Content-type" content="text/html;charset=UTF-8"/>
   <meta name="description" content="Dartmouth MagLab "/>
   <meta name="keywords" content="magnetics, Dartmouth, Dartmouth Slotznick, Dartmouth paleomagnetism, paleomagnetism, environmental magnetism, Dartmouth MagLab, Dartmouth Mag Lab"/>
